@@ -1,5 +1,6 @@
 0.17
  - Add doc for Snak::Wikidata::GivenName::Douglas fixture.
+ - Improve Property::Wikidata::InstanceOf object.
  - Remove ';;' from example.
  - Rename Reference::Wikidata::Fixture1 fixture to VIAF.
 
